# machina

./: .gitignore  Cargo.toml  README.md  grammar.bnf
.cargo/: config.toml
docs/: getting-started.md  index.md  ir_design.md  mem_safety.md  tour.md  why-machina.md
examples/: arith_ops.mc  array_as_slice.mc  array_repeat.mc  bit_ops.mc  bounds_check.mc  break_continue_return.mc  closure_capture.mc  counter.mc  divbyzero_check.mc  error_unions.mc  for_array.mc  for_range.mc  fstring.mc  generic_methods.mc  generic_types.mc  generics.mc  heap_alloc.mc  hello.mc  if_else_blocks.mc  indirect_call.mc  inout.mc  inout_heap_arg.mc  len_property.mc  linked_list.mc  logical_ops.mc  match_literals.mc  methods.mc  move.mc  num_bases.mc  out_params.mc  overloads.mc  partial_init_drop.mc  partial_init_via_out.mc  points.mc  print.mc  print_int.mc  properties.mc  range.mc  range_check.mc  refined_int.mc  (+10 more)
runtime/: README.md  alloc.c  args.c  conv.c  dyn_array.c  fmt.c  hash_table.c  hash_table.h  io.c  machine_runtime.c  machine_runtime.h  map_table.c  map_table.h  mem.c  print.c  set.c  string.c  string.h  trap.c  trap_core.c  types.h
src/: analysis.rs  ast.rs  codegen.rs  compile.rs  context.rs  diag.rs  diagnostics.rs  ids.rs  ir.rs  ir_codegen.rs  layout.rs  lexer.rs  lib.rs  lower.rs  main.rs  monomorphize.rs  nrvo.rs  parser.rs  resolver.rs  sem_analysis.rs  sem_check.rs  semantic.rs  (+4 more)
tooling/lsp/: Cargo.toml
tooling/lsp/src/: client.rs  handlers.rs  lib.rs  main.rs  server.rs  session.rs  transport.rs
tooling/lsp/src/tests/: t_handlers.rs  t_server.rs  t_session.rs
(+1256 files in other folders)
