[package]
name = "machina"
version = "0.1.0"
edition = "2024"
authors = ["Khaled Hammouda"]
description = "Machina Compiler"

[[bin]]
name = "mcc"
path = "src/main.rs"
test = false

[lib]
doctest = false

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
enum-display = "0.2.1"
indexmap = "2.12.0"
textwrap = "0.16.2"
thiserror = "2.0.17"

[dev-dependencies]
indoc = "2.0.7"
