[package]
name = "machina-lsp"
version = "0.1.0"
edition = "2024"
description = "Machina LSP server"

[[bin]]
name = "machina-lsp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
machina = { path = "../.." }
